--- a/package.json
+++ b/package.json
@@ -5,26 +5,45 @@
   "main": "index.js",
   "browserslist": [
     "last 2 version",
-    "> 1%",
-    "not dead",
-    "maintained node versions"
+    "> 2%",
+    "not dead"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp start",
+    "build": "gulp build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "browser-sync": "^2.27.7",
     "del": "^6.0.0",
+    "eslint": "^8.1.0",
+    "eslint-config-standard": "^16.0.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-if": "^3.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-shorthand": "^1.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgstore": "^8.0.0",
+    "node-sass": "^6.0.1",
+    "stylelint": "^14.0.1",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-config-standard-scss": "^2.0.1",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-stream": "^7.0.0",
     "yargs": "^17.2.1"
   }
 }
